# go-lite-compiler

./: .gitignore  .test.go.swp  CMakeLists.txt  README.md  __golite_target_code.out  build.sh  execute.sh  hello.go  run.sh  t.go  test.go  test2.go
include/: ASTTraversal.hpp  ArrayExp.hpp  AssignStatement.hpp  Binary.h  Binary.hpp  BinaryOperatorExp.hpp  BoolExp.hpp  BreakStatement.hpp  Builtins.hpp  BuiltinsExp.hpp  ContinueStatement.hpp  Declaration.h  Declaration.hpp  Expression.hpp  FloatExp.hpp  ForStatement.hpp  FunctionCallExp.hpp  FunctionDeclaration.hpp  IdentifierExp.hpp  IfElseStatement.hpp  IfStatement.hpp  IfStmt.hpp  IncDecStatement.hpp  Instruction.h  Instruction.hpp  IntegerExp.hpp  Literal.hpp  LiteralExp.hpp  Literals.hpp  Node.hpp  PrettyPrinter.hpp  PrettyPrinterVisitor.hpp  PrintStatement.hpp  Program.hpp  ReturnStatement.hpp  RuneExp.hpp  Statement.h  Statement.hpp  StatementEnum.hpp  StringExp.hpp  (+11 more)
include/AST/: ASTTraversal.hpp  Node.hpp
include/Services/: CodeGenerator.hpp  PrettyPrinter.hpp  SymbolTableBuilder.hpp  TypeChecker.hpp  Visitor.hpp  Weeder.hpp
include/SymbolTable/: .SymbolTable.hpp.swp  HashFunction.h  Symbol.hpp  SymbolTable.hpp
include/TypeDescriptor/: TypeDescriptor.hpp
include/TypeDescriptorTable/: .TypeDescriptorTable.hpp.swp  TypeDescriptorTable.hpp
src/: PrettyPrinter.cpp  main.cpp  pretty.cpp
src/ast/: ASTTraversal.cpp
src/backEnd/: ASTTraversal.cpp  Program.cpp  pretty.cpp
src/frontEnd/: PrettyPrinterVisitor.cpp  golite.l  golite.y  golite_anton.l  out.txt
src/helpers/: HashFunction.cpp  vectorExtension.cpp  (+1 more)
(+210 files in other folders)
